# django-polls

./: README.md  db.sqlite3  justfile  manage.py  pyproject.toml
django_polls/: asgi.py  settings.py  urls.py  wsgi.py
hello/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_rename_quetion_choice_question.py  0003_alter_choice_id_alter_question_id.py
polls/templates/polls/: detail.html  index.html  index.jinja
templates/admin/: base_site.html
