[project]
name = "django-polls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-debug-toolbar>=6.2.0",
    "django-stubs-ext>=5.2.9",
    "django-types>=0.23.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = ["**/migrations/*.py"]

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]

[dependency-groups]
dev = [
    "pyrefly>=0.53.0",
    "ruff>=0.15.2",
]
